[project]
name = "mri-nufft"
description = "MRI Non-Cartesian Fourier Operators with multiple computation backends."
authors = [{name="Pierre-antoine Comby", email="pierre-antoine.comby@crans.org"}]

readme = "README.rst"
dependencies = ["numpy>=2.2", "scipy>=1.13", "matplotlib>=3.9", "tqdm"]
requires-python = ">=3.10"

dynamic = ["version"]

[project.optional-dependencies]

gpunufft = ["gpuNUFFT>=0.10.1", "cupy-cuda13x[ctk]"]

torchkbnufft = ["torchkbnufft", "cupy-cuda13x[ctk]"]
torchkbnufft-cpu = ["torchkbnufft", "cupy-cuda13x[ctk]"]
torchkbnufft-gpu = ["torchkbnufft", "cupy-cuda13x[ctk]"]

cufinufft = ["cufinufft>=2.4.0", "cupy-cuda13x[ctk]"]
tensorflow = ["tensorflow-mri>=0.22.0 ; python_version<'3.11'"]
finufft = ["finufft>=2.4.0"]
sigpy = ["sigpy"]
pynfft = ["pynfft3"]
ducc0 = ["ducc0>=0.40.0"]

pynufft = ["pynufft"]
# for easier test deployment
pynufft-cpu = ["pynufft"]
pynufft-gpu = ["pynufft"]

io = ["pymapvbvd", "pypulseq"]
extra = ["pymapvbvd", "scikit-image", "scikit-learn", "pywavelets", "osqp", "ptwt"]
autodiff = ["torch", "deepinv"]


test = ["pytest<8.0.0", "pytest-cov", "pytest-xdist", "pytest-sugar", "pytest-cases"]
dev = ["black", "isort", "ruff"]
doc = ["sphinx-book-theme","sphinx-copybutton", "sphinxcontrib-video", "sphinx-gallery", "matplotlib", "pooch", "brainweb-dl", "coverage", "fastmri"]
# pooch is for scipy.datasets

[build-system]
requires = ["setuptools", "setuptools-scm[toml]", "wheel"]

# https://docs.astral.sh/uv/guides/integration/pytorch/
[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" }]
torchvision = [{ index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" }]


[tool.setuptools_scm]
write_to = "src/mrinufft/_version.py"
version_scheme = "python-simplified-semver"
local_scheme="no-local-version"
fallback_version="v99-dev"

[tool.coverage.run]
omit = ["*tests*", "*__init__*", "*setup.py*", "*_version.py*", "*example*"]
relative_files = true
source = ["src"]

[tool.coverage.report]
precision = 2
exclude_lines = ["pragma: no cover", "raise NotImplementedError"]

# Formatting using black.
[tool.black]

#linting using ruff
[tool.ruff]
extend-exclude = [ "example_*.py" , "*_version.py"]

[tool.ruff.lint]
select = ["E", "F", "B", "Q", "UP", "D"]

ignore = [
"B905", # zip() without an explicit strict= parameter
"B028", # No explicit stacklevel keyword argument found
"F401", # Using ``try: import ... except:`` is nice.
]
[tool.ruff.lint.per-file-ignores]
"examples/**" = ["D", "E731"]

[tool.ruff.lint.pydocstyle]
convention="numpy"

[tool.isort]
profile="black"

[tool.pytest.ini_options]
minversion = "6.0"
norecursedirs = ["tests/helpers"]
testpaths=["tests"]

[tool.pylsp-mypy]
enabled = false
live_mode = false

[tool.mypy]
ignore_missing_imports = true

[tool.pyright]
reportPossiblyUnboundVariable = false
typeCheckingMode = "basic"
reportOptionalSubscript = false
reportOptionalMemberAccess = false

